# OpSimSummaryV2

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.ipynb
docs/: basicusage.rst  conf.py  host_match.rst  index.rst  installation.rst  noise_calc.rst
notebooks/: Example_no_host.ipynb  Untitled.ipynb
opsimsummaryv2/: __init__.py  _cli.py  sim_io.py  simlib.py  summary_opsim.py  utils.py
scripts/: NERSC_create_SIMLIB_from_OPSIM_noHost_all.sh  make_simlib.job  make_simlib.py
scripts/logs/: LSST_SIMLIBnoHOST_53178010-4294967294.err  LSST_SIMLIBnoHOST_53178387-4294967294.out  LSST_SIMLIBnoHOST_53180560-4294967294.out  LSST_SIMLIBnoHOST_53564994-4294967294.err  LSST_SIMLIBnoHOST_53564994-4294967294.out  LSST_SIMLIBnoHOST_53566641-4294967294.err  LSST_SIMLIBnoHOST_53566641-4294967294.out
