[metadata]
name = opsimsummaryv2
author = Bastien Carreres
author_email = carreres@cppm.in2p3.fr
description = "Turn OpSim output to simulation inputs"
long_description = file : README.md
license = BSD-3-Clause

[options]
packages =
    opsimsummaryv2
python_requires = >=3.9, <4
install_requires = 
    pandas 
    geopandas
    numpy
    sqlalchemy
